[package]
name = "jim"
version = "0.0.0"
authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
license = "MIT"
repository = "https://github.com/nathanielc/jim"
description = "Language for simple Home Automation"
edition = "2018"

[[bin]]
name = "jim"
path = "src/jim.rs"

[dependencies]
lexpr = "0.2.4"
peg = "0.6"
wasmtime = "0.9.0"
